--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8">
   <title>Золотарь 58 — Ассенизаторские услуги Пенза</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css" id="theme-link">
-  <script src="theme-switcher.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="bg-pattern"></div>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img big-logo" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
+        <a href="equipment.html">Оборудование</a>
         <a href="about.html">О компании</a>
+        <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
-        <button id="theme-toggle" type="button" style="margin-left:18px;" class="theme-btn">🌙 Темная тема</button>
       </nav>
     </div>
   </header>
@@ -27,36 +27,8 @@
   <main>
     <section class="main-intro">
       <h1>Откачка и прочистка канализации 24/7</h1>
-      <p class="main-subtitle">Современное оборудование, оперативный выезд, гарантия качества.<br>Работаем по Пензе и области для физ. и юр. лиц.</p>
-      <a class="cta" href="contacts.html">Оставить заявку</a>
-    </section>
-
-    <section class="usps">
-      <div><span class="usp-icon">📞</span> Работаем 24/7</div>
-      <div><span class="usp-icon">💧</span> Современное оборудование</div>
-      <div><span class="usp-icon">📄</span> Договоры для юр. лиц</div>
-    </section>
-
-    <section class="gallery">
-      <h2>Примеры работ</h2>
-      <div class="gallery-list">
-        <div class="gallery-item">
-          <img src="example1.jpg" alt="Пример работы 1" class="gallery-placeholder">
-          <span>Фото появится позже</span>
-        </div>
-        <div class="gallery-item">
-          <img src="example2.jpg" alt="Пример работы 2" class="gallery-placeholder">
-          <span>Фото появится позже</span>
-        </div>
-        <div class="gallery-item">
-          <img src="example3.jpg" alt="Пример работы 3" class="gallery-placeholder">
-          <span>Фото появится позже</span>
-        </div>
-        <div class="gallery-item">
-          <img src="example4.jpg" alt="Пример работы 4" class="gallery-placeholder">
-          <span>Фото появится позже</span>
-        </div>
-      </div>
+      <p class="main-subtitle">Современное оборудование, оперативный выезд, гарантия качества.<br>Работаем по Пензе и области для физических и юридических лиц.</p>
+      <a class="cta phone-btn" href="tel:+79022073636">Позвонить</a>
     </section>
   </main>
 
