--- a/about.html
+++ b/about.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <title>О компании — Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css" id="theme-link">
-  <script src="theme-switcher.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img big-logo" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
+        <a href="equipment.html">Оборудование</a>
         <a href="about.html" style="color:#2478e2; font-weight:700;">О компании</a>
+        <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
-        <button id="theme-toggle" type="button" style="margin-left:18px;" class="theme-btn">🌙 Темная тема</button>
       </nav>
     </div>
   </header>
@@ -29,16 +29,16 @@
       <p class="main-subtitle" style="margin-bottom:34px;">Ассенизаторские услуги, прочистка и откачка канализации в Пензе и области — качественно и без выходных.</p>
       <div class="about-text">
         <p>
-          «Золотарь 58» — это современная компания, специализирующаяся на аварийной прочистке и профессиональной откачке канализации, септиков, колодцев и других инженерных сетей. Мы работаем как с частными клиентами, так и с юридическими лицами, заключаем официальные договоры на регулярное обслуживание организаций.<br><br>
-          В нашем распоряжении — современное гидродинамическое и механическое оборудование, позволяющее эффективно устранять любые засоры, проводить видеоинспекцию труб и выполнять полный спектр работ по обслуживанию канализационных систем.<br><br>
-          Наши преимущества:<br>
-          — Круглосуточный аварийный выезд и оперативное реагирование;<br>
-          — Гарантия качества и честные цены;<br>
-          — Опытные сотрудники с допуском и необходимой квалификацией;<br>
-          — Безопасные технологии, щадящие любые виды труб;<br>
-          — Возможность оплаты наличными и по безналу;<br>
-          — Удобный сервис: заявку можно оставить прямо на сайте.<br><br>
-          Мы нацелены на долгосрочное сотрудничество и делаем всё, чтобы наши клиенты всегда были довольны результатом. Оставляйте заявку — мы быстро приедем и решим любую задачу!
+          «Золотарь 58» — профессиональный сервис по аварийной прочистке и откачке канализации, септиков, колодцев и других инженерных систем. Мы работаем с физическими и юридическими лицами на основании официальных договоров.<br><br>
+          В нашем распоряжении — современное гидродинамическое и механическое оборудование для эффективного устранения любых засоров, проведения видеодиагностики труб и полного спектра сервисных работ.<br><br>
+          <b>Преимущества сотрудничества с нами:</b><br>
+          — Круглосуточный аварийный выезд;<br>
+          — Гарантия качества, фиксированные цены;<br>
+          — Опытные специалисты с профессиональной подготовкой;<br>
+          — Безопасные технологии для всех типов труб;<br>
+          — <b>Возможна оплата наличными и безналичным расчетом.</b><br>
+          — Юридическое сопровождение для организаций.<br><br>
+          Мы всегда нацелены на долгосрочное сотрудничество, прозрачные отношения и высокое качество предоставляемых услуг.
         </p>
       </div>
     </section>
