--- a/contacts.html
+++ b/contacts.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <title>Контакты — Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css" id="theme-link">
-  <script src="theme-switcher.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img big-logo" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
+        <a href="equipment.html">Оборудование</a>
         <a href="about.html">О компании</a>
+        <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html" style="color:#2478e2; font-weight:700;">Контакты</a>
-        <button id="theme-toggle" type="button" style="margin-left:18px;" class="theme-btn">🌙 Темная тема</button>
       </nav>
     </div>
   </header>
@@ -26,32 +26,10 @@
   <main>
     <section class="main-intro" style="margin-top:35px;">
       <h1>Контакты</h1>
-      <p class="main-subtitle" style="margin-bottom:18px;">Свяжитесь с нами любым удобным способом — работаем 24/7!</p>
-    </section>
-    <section class="contacts-block">
-      <div class="contacts-flex">
-        <div class="contacts-details">
-          <b>Телефон:</b><br>
-          <a href="tel:+79022073636" class="phone-link">+7 (902) 207-36-36</a><br><br>
-          <b>Email:</b><br>
-          <a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a><br><br>
-          <b>Время работы:</b><br>
-          Круглосуточно, без выходных<br><br>
-          <b>Адрес:</b><br>
-          Пенза, ул. Строителей, 21<br>
-        </div>
-        <div class="contacts-form">
-          <h3 style="margin-top:0;">Оставить заявку</h3>
-          <form action="mailto:zolotar85@list.ru" method="post" enctype="text/plain">
-            <input type="text" name="name" placeholder="Ваше имя" required>
-            <input type="tel" name="phone" placeholder="Телефон для связи" required>
-            <textarea name="message" placeholder="Комментарий или адрес" rows="3"></textarea>
-            <button type="submit" class="cta">Отправить</button>
-          </form>
-        </div>
-      </div>
-      <div class="map-block">
-        <iframe src="https://yandex.ru/map-widget/v1/?ll=45.027526%2C53.193810&z=17&mode=whatshere&whatshere%5Bpoint%5D=45.027526%2C53.193810&whatshere%5Bzoom%5D=17" width="100%" height="260" frameborder="0" allowfullscreen="true" style="border-radius:14px; margin-top:25px;"></iframe>
+      <p class="main-subtitle" style="margin-bottom:18px;">Связь только по телефону. Звоните — работаем 24/7!</p>
+      <div class="contacts-details" style="font-size:1.35em; margin:35px 0 35px 0;">
+        <b>Телефон:</b><br>
+        <a href="tel:+79022073636" class="phone-link" style="font-size:2em; font-weight:700; color:#2478e2;">+7 (902) 207-36-36</a>
       </div>
     </section>
   </main>
