--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       </a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
-        <a href="equipment.html">Оборудование</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
@@ -29,6 +28,29 @@
       <h1>Откачка и прочистка канализации 24/7</h1>
       <p class="main-subtitle">Современное оборудование, оперативный выезд, гарантия качества.<br>Работаем по Пензе и области для физических и юридических лиц.</p>
       <a class="cta phone-btn" href="tel:+79022073636">Позвонить</a>
+    </section>
+
+    <section class="gallery">
+      <h2>Наше оборудование</h2>
+      <div class="gallery-list">
+        <div class="gallery-item">
+          <img src="tech1.jpg" alt="Ассенизаторская машина" class="gallery-placeholder">
+          <span>Основная ассенизаторская техника</span>
+        </div>
+        <div class="gallery-item">
+          <img src="tech2.jpg" alt="Гидродинамическое оборудование" class="gallery-placeholder">
+          <span>Гидродинамическое оборудование</span>
+        </div>
+        <div class="gallery-item">
+          <img src="tech3.jpg" alt="Механические инструменты" class="gallery-placeholder">
+          <span>Механические инструменты</span>
+        </div>
+        <div class="gallery-item">
+          <img src="tech4.jpg" alt="Видеодиагностика" class="gallery-placeholder">
+          <span>Система видеодиагностики</span>
+        </div>
+      </div>
+      <p style="margin-top:22px; color:#527;">Используем только современную и профессиональную технику для эффективной и аккуратной работы.</p>
     </section>
   </main>
 
