--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,6 @@
       </a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
-        <a href="equipment.html">Оборудование</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html" style="color:#2478e2; font-weight:700;">Контакты</a>
@@ -26,10 +25,14 @@
   <main>
     <section class="main-intro" style="margin-top:35px;">
       <h1>Контакты</h1>
-      <p class="main-subtitle" style="margin-bottom:18px;">Связь только по телефону. Звоните — работаем 24/7!</p>
-      <div class="contacts-details" style="font-size:1.35em; margin:35px 0 35px 0;">
+      <p class="main-subtitle" style="margin-bottom:18px;">Связь только по телефону или e-mail. Звоните — работаем 24/7!</p>
+      <div class="contacts-details" style="font-size:1.23em; margin:32px 0 22px 0;">
         <b>Телефон:</b><br>
-        <a href="tel:+79022073636" class="phone-link" style="font-size:2em; font-weight:700; color:#2478e2;">+7 (902) 207-36-36</a>
+        <span style="font-size:1.45em; font-weight:700; color:#2478e2; letter-spacing:1px;">+7 (902) 207-36-36</span><br>
+        <a class="cta phone-btn" href="tel:+79022073636" style="margin: 22px auto 0 auto;">Позвонить</a>
+        <br><br>
+        <b>E-mail:</b><br>
+        <a href="mailto:zolotar85@list.ru" class="phone-link">zolotar85@list.ru</a>
       </div>
     </section>
   </main>
