--- a/contacts.html
+++ b/contacts.html
@@ -25,7 +25,7 @@
   <main>
     <section class="main-intro" style="margin-top:35px;">
       <h1>Контакты</h1>
-      <p class="main-subtitle" style="margin-bottom:18px;">Связь только по телефону или e-mail. Звоните — работаем 24/7!</p>
+      <p class="main-subtitle" style="margin-bottom:18px;">Связь по телефону или e-mail. Звоните — работаем 24/7!</p>
       <div class="contacts-details" style="font-size:1.23em; margin:32px 0 22px 0;">
         <b>Телефон:</b><br>
         <span style="font-size:1.45em; font-weight:700; color:#2478e2; letter-spacing:1px;">+7 (902) 207-36-36</span><br>
