--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
       </div>
       <div class="service-item">
         <div class="service-img-hover">
-          <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="service-img">
+          <img src="hydrodynamic.jpg" alt="Гидродинамическая прочистка" class="service-img">
           <div class="service-hover-desc">
             Вода под высоким давлением очищает трубы от наростов, жира и ржавчины. Безопасно для всех типов труб, долговременный эффект.
           </div>
@@ -48,7 +48,7 @@
       </div>
       <div class="service-item">
         <div class="service-img-hover">
-          <img src="mechanical-cleaning.jpg" alt="Механическая прочистка" class="service-img">
+          <img src="mechanical.jpg" alt="Механическая прочистка" class="service-img">
           <div class="service-hover-desc">
             Удаляем сложные засоры тросом, специальными машинами и ручным инструментом. Эффективно даже при старых трубах и "застарелых" пробках.
           </div>
@@ -57,7 +57,7 @@
       </div>
       <div class="service-item">
         <div class="service-img-hover">
-          <img src="septic-cleaning.jpg" alt="Откачка выгребных ям, септиков" class="service-img">
+          <img src="septic.jpg" alt="Откачка выгребных ям, септиков" class="service-img">
           <div class="service-hover-desc">
             Быстро и аккуратно откачиваем любые объёмы — до 12 куб.м за выезд. Илосос, санитарная обработка, индивидуальный подход.
           </div>
@@ -66,7 +66,7 @@
       </div>
       <div class="service-item">
         <div class="service-img-hover">
-          <img src="videoinspection.jpg" alt="Видеоинспекция канализации" class="service-img">
+          <img src="video.jpg" alt="Видеоинспекция канализации" class="service-img">
           <div class="service-hover-desc">
             Осмотр внутренних стенок труб с помощью видеокамеры — позволяет обнаружить любые проблемы и предотвратить аварии.
           </div>
@@ -75,7 +75,7 @@
       </div>
       <div class="service-item">
         <div class="service-img-hover">
-          <img src="well-search.jpg" alt="Поиск колодцев" class="service-img">
+          <img src="search.jpg" alt="Поиск колодцев" class="service-img">
           <div class="service-hover-desc">
             Находим скрытые колодцы и элементы канализации — для ремонта, обслуживания и предотвращения аварийных ситуаций.
           </div>
@@ -84,7 +84,7 @@
       </div>
       <div class="service-item">
         <div class="service-img-hover">
-          <img src="for-orgs.jpg" alt="Обслуживание организаций" class="service-img">
+          <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img">
           <div class="service-hover-desc">
             Регулярное сервисное обслуживание предприятий и юридических лиц. Официальные договора, гарантия и отчётность.
           </div>
