--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@
         <img src="logo.png" class="logo-img big-logo" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
-      <nav class="nav">
+      <nav class="nav" id="mainNav">
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
+      <button class="burger" id="burgerBtn">&#9776;</button>
+    </div>
+    <div class="mobile-nav" id="mobileNav">
+      <a href="services.html">Услуги</a>
+      <a href="about.html">О компании</a>
+      <a href="licenses.html">Сертификаты</a>
+      <a href="contacts.html">Контакты</a>
     </div>
   </header>
 
@@ -59,5 +66,23 @@
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
+
+  <script>
+    const burgerBtn = document.getElementById('burgerBtn');
+    const mobileNav = document.getElementById('mobileNav');
+    burgerBtn.addEventListener('click', () => {
+      mobileNav.classList.toggle('show');
+      if (mobileNav.classList.contains('show')) {
+        Array.from(mobileNav.getElementsByTagName('a')).forEach(a => {
+          a.onclick = () => mobileNav.classList.remove('show');
+        });
+      }
+    });
+    window.addEventListener('resize', () => {
+      if (window.innerWidth > 600) {
+        mobileNav.classList.remove('show');
+      }
+    });
+  </script>
 </body>
 </html>
