--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
       </div>
       <div class="service-item">
         <div class="service-img-hover">
-          <img src="hydrodynamic.jpg" alt="Гидродинамическая прочистка" class="service-img">
+          <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="service-img">
           <div class="service-hover-desc">
             Вода под высоким давлением очищает трубы от наростов, жира и ржавчины. Безопасно для всех типов труб, долговременный эффект.
           </div>
