--- a/services.html
+++ b/services.html
@@ -7,96 +7,60 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="bg-pattern"></div>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
         <img src="logo.png" class="logo-img big-logo" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
-      <nav class="nav">
-        <a href="services.html" style="color:#2478e2; font-weight:700;">Услуги</a>
+      <nav class="nav" id="mainNav">
+        <a href="services.html" style="font-weight:700;">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
+      <button class="burger" id="burgerBtn">&#9776;</button>
+    </div>
+    <div class="mobile-nav" id="mobileNav">
+      <a href="services.html" style="font-weight:700;">Услуги</a>
+      <a href="about.html">О компании</a>
+      <a href="licenses.html">Сертификаты</a>
+      <a href="contacts.html">Контакты</a>
     </div>
   </header>
+
   <main>
-    <section class="main-intro" style="margin-top:35px;">
+    <!-- Здесь твой контент по услугам -->
+    <section>
       <h1>Наши услуги</h1>
-      <p class="main-subtitle">Профессиональные ассенизаторские услуги и аварийная прочистка канализации 24/7</p>
-    </section>
-    <section class="service-list">
-      <!-- Пример одной услуги -->
-      <div class="service-item">
-        <div class="service-img-hover">
-          <img src="emergency-cleaning.jpg" alt="Аварийная прочистка канализации" class="service-img">
-          <div class="service-hover-desc">
-            Быстрая и эффективная помощь при любых засорах. Используем механическую и гидродинамическую прочистку труб.
-          </div>
-        </div>
-        <h3>Аварийная прочистка канализации</h3>
-      </div>
-      <div class="service-item">
-        <div class="service-img-hover">
-          <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="service-img">
-          <div class="service-hover-desc">
-            Вода под высоким давлением очищает трубы от наростов, жира и ржавчины. Безопасно для всех типов труб, долговременный эффект.
-          </div>
-        </div>
-        <h3>Гидродинамическая прочистка</h3>
-      </div>
-      <div class="service-item">
-        <div class="service-img-hover">
-          <img src="mechanical.jpg" alt="Механическая прочистка" class="service-img">
-          <div class="service-hover-desc">
-            Удаляем сложные засоры тросом, специальными машинами и ручным инструментом. Эффективно даже при старых трубах и "застарелых" пробках.
-          </div>
-        </div>
-        <h3>Механическая прочистка</h3>
-      </div>
-      <div class="service-item">
-        <div class="service-img-hover">
-          <img src="septic.jpg" alt="Откачка выгребных ям, септиков" class="service-img">
-          <div class="service-hover-desc">
-            Быстро и аккуратно откачиваем любые объёмы — до 12 куб.м за выезд. Илосос, санитарная обработка, индивидуальный подход.
-          </div>
-        </div>
-        <h3>Откачка выгребных ям, септиков</h3>
-      </div>
-      <div class="service-item">
-        <div class="service-img-hover">
-          <img src="video.jpg" alt="Видеоинспекция канализации" class="service-img">
-          <div class="service-hover-desc">
-            Осмотр внутренних стенок труб с помощью видеокамеры — позволяет обнаружить любые проблемы и предотвратить аварии.
-          </div>
-        </div>
-        <h3>Видеоинспекция канализации</h3>
-      </div>
-      <div class="service-item">
-        <div class="service-img-hover">
-          <img src="search.jpg" alt="Поиск колодцев" class="service-img">
-          <div class="service-hover-desc">
-            Находим скрытые колодцы и элементы канализации — для ремонта, обслуживания и предотвращения аварийных ситуаций.
-          </div>
-        </div>
-        <h3>Поиск скрытых колодцев</h3>
-      </div>
-      <div class="service-item">
-        <div class="service-img-hover">
-          <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img">
-          <div class="service-hover-desc">
-            Регулярное сервисное обслуживание предприятий и юридических лиц. Официальные договора, гарантия и отчётность.
-          </div>
-        </div>
-        <h3>Обслуживание организаций</h3>
+      <div class="service-list">
+        <!-- твои карточки услуг -->
       </div>
     </section>
   </main>
+
   <footer>
     <div class="container">
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
+  <script>
+    const burgerBtn = document.getElementById('burgerBtn');
+    const mobileNav = document.getElementById('mobileNav');
+    burgerBtn.addEventListener('click', () => {
+      mobileNav.classList.toggle('show');
+      if (mobileNav.classList.contains('show')) {
+        Array.from(mobileNav.getElementsByTagName('a')).forEach(a => {
+          a.onclick = () => mobileNav.classList.remove('show');
+        });
+      }
+    });
+    window.addEventListener('resize', () => {
+      if (window.innerWidth > 600) {
+        mobileNav.classList.remove('show');
+      }
+    });
+  </script>
 </body>
 </html>
