--- a/licenses.html
+++ b/licenses.html
@@ -7,48 +7,65 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="bg-pattern"></div>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
         <img src="logo.png" class="logo-img big-logo" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
-      <nav class="nav">
+      <nav class="nav" id="mainNav">
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
-        <a href="licenses.html" style="color:#2478e2; font-weight:700;">Сертификаты</a>
+        <a href="licenses.html" style="font-weight:700;">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
+      <button class="burger" id="burgerBtn">&#9776;</button>
+    </div>
+    <div class="mobile-nav" id="mobileNav">
+      <a href="services.html">Услуги</a>
+      <a href="about.html">О компании</a>
+      <a href="licenses.html" style="font-weight:700;">Сертификаты</a>
+      <a href="contacts.html">Контакты</a>
     </div>
   </header>
-
   <main>
-    <section class="main-intro" style="margin-top:30px;">
-      <h1>Сертификаты и лицензии</h1>
-      <p class="main-subtitle" style="margin-bottom:24px;">Наши документы — гарантия качества и юридической прозрачности.</p>
-    </section>
+    <!-- Сертификаты и лицензии -->
     <section class="gallery">
+      <h1>Сертификаты и лицензии</h1>
       <div class="gallery-list">
         <div class="gallery-item">
-          <img src="cert1.jpg" alt="Сертификат" class="gallery-placeholder">
+          <img src="license1.jpg" alt="Сертификат 1" class="gallery-placeholder">
           <span>Сертификат появится позже</span>
         </div>
         <div class="gallery-item">
-          <img src="cert2.jpg" alt="Лицензия" class="gallery-placeholder">
-          <span>Лицензия появится позже</span>
-        </div>
-        <div class="gallery-item">
-          <img src="cert3.jpg" alt="Разрешение" class="gallery-placeholder">
-          <span>Документ появится позже</span>
+          <img src="license2.jpg" alt="Сертификат 2" class="gallery-placeholder">
+          <span>Сертификат появится позже</span>
         </div>
       </div>
     </section>
   </main>
-
   <footer>
     <div class="container">
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
+  <script>
+    const burgerBtn = document.getElementById('burgerBtn');
+    const mobileNav = document.getElementById('mobileNav');
+    burgerBtn.addEventListener('click', () => {
+      mobileNav.classList.toggle('show');
+      if (mobileNav.classList.contains('show')) {
+        Array.from(mobileNav.getElementsByTagName('a')).forEach(a => {
+          a.onclick = () => mobileNav.classList.remove('show');
+        });
+      }
+    });
+    window.addEventListener('resize', () => {
+      if (window.innerWidth > 600) {
+        mobileNav.classList.remove('show');
+      }
+    });
+  </script>
 </body>
 </html>
