--- a/contacts.html
+++ b/contacts.html
@@ -7,40 +7,63 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="bg-pattern"></div>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
         <img src="logo.png" class="logo-img big-logo" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
-      <nav class="nav">
+      <nav class="nav" id="mainNav">
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
-        <a href="contacts.html" style="color:#2478e2; font-weight:700;">Контакты</a>
+        <a href="contacts.html" style="font-weight:700;">Контакты</a>
       </nav>
+      <button class="burger" id="burgerBtn">&#9776;</button>
+    </div>
+    <div class="mobile-nav" id="mobileNav">
+      <a href="services.html">Услуги</a>
+      <a href="about.html">О компании</a>
+      <a href="licenses.html">Сертификаты</a>
+      <a href="contacts.html" style="font-weight:700;">Контакты</a>
     </div>
   </header>
-
   <main>
-    <section class="main-intro" style="margin-top:35px;">
+    <section class="contacts-details">
       <h1>Контакты</h1>
-      <p class="main-subtitle" style="margin-bottom:18px;">Связь по телефону или e-mail. Звоните — работаем 24/7!</p>
-      <div class="contacts-details" style="font-size:1.23em; margin:32px 0 22px 0;">
-        <b>Телефон:</b><br>
-        <span style="font-size:1.45em; font-weight:700; color:#2478e2; letter-spacing:1px;">+7 (902) 207-36-36</span><br>
-        <a class="cta phone-btn" href="tel:+79022073636" style="margin: 22px auto 0 auto;">Позвонить</a>
-        <br><br>
-        <b>E-mail:</b><br>
-        <a href="mailto:zolotar85@list.ru" class="phone-link">zolotar85@list.ru</a>
+      <div>
+        <div style="font-size:1.17em; font-weight:600; margin:12px 0;">
+          Телефон: <a class="phone-link phone-btn" href="tel:+79022073636">+7 (902) 207-36-36</a>
+        </div>
+        <div style="font-size:1.13em; margin:12px 0 4px 0;">
+          Email: <a class="phone-link" href="mailto:zolotar85@list.ru">zolotar85@list.ru</a>
+        </div>
+        <div style="color:#6b7c8b; margin-top:20px;">Звоните — работаем 24/7, выезд по Пензе и области</div>
       </div>
     </section>
   </main>
-
   <footer>
     <div class="container">
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
+  <script>
+    const burgerBtn = document.getElementById('burgerBtn');
+    const mobileNav = document.getElementById('mobileNav');
+    burgerBtn.addEventListener('click', () => {
+      mobileNav.classList.toggle('show');
+      if (mobileNav.classList.contains('show')) {
+        Array.from(mobileNav.getElementsByTagName('a')).forEach(a => {
+          a.onclick = () => mobileNav.classList.remove('show');
+        });
+      }
+    });
+    window.addEventListener('resize', () => {
+      if (window.innerWidth > 600) {
+        mobileNav.classList.remove('show');
+      }
+    });
+  </script>
 </body>
 </html>
