--- a/services.html
+++ b/services.html
@@ -31,11 +31,66 @@
   </header>
 
   <main>
-    <!-- Здесь твой контент по услугам -->
     <section>
       <h1>Наши услуги</h1>
       <div class="service-list">
-        <!-- твои карточки услуг -->
+
+        <div class="service-item">
+          <div class="service-img-hover">
+            <img src="emergency-cleaning.jpg" alt="Аварийная прочистка" class="service-img">
+            <div class="service-hover-desc">Быстрая и эффективная помощь при любых засорах — механическая и гидродинамическая прочистка труб.</div>
+          </div>
+          <h3>Аварийная прочистка канализации</h3>
+        </div>
+
+        <div class="service-item">
+          <div class="service-img-hover">
+            <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="service-img">
+            <div class="service-hover-desc">Вода под высоким давлением очищает трубы от наростов, жира и ржавчины. Безопасно и надёжно.</div>
+          </div>
+          <h3>Гидродинамическая прочистка</h3>
+        </div>
+
+        <div class="service-item">
+          <div class="service-img-hover">
+            <img src="mechanical-cleaning.jpg" alt="Механическая прочистка" class="service-img">
+            <div class="service-hover-desc">Удаляем сложные засоры тросом, машинами и ручным инструментом — даже в старых трубах.</div>
+          </div>
+          <h3>Механическая прочистка</h3>
+        </div>
+
+        <div class="service-item">
+          <div class="service-img-hover">
+            <img src="septic-cleaning.jpg" alt="Откачка выгребных ям" class="service-img">
+            <div class="service-hover-desc">Быстрая и аккуратная откачка любых объёмов — до 12 куб.м за выезд, санитарная обработка, илосос.</div>
+          </div>
+          <h3>Откачка выгребных ям, септиков, биотуалетов</h3>
+        </div>
+
+        <div class="service-item">
+          <div class="service-img-hover">
+            <img src="video-inspection.jpg" alt="Видеоинспекция" class="service-img">
+            <div class="service-hover-desc">Осмотр внутренних стенок труб камерой, поиск и предотвращение аварийных ситуаций, полный отчёт.</div>
+          </div>
+          <h3>Видеоинспекция канализации</h3>
+        </div>
+
+        <div class="service-item">
+          <div class="service-img-hover">
+            <img src="well-search.jpg" alt="Поиск колодцев" class="service-img">
+            <div class="service-hover-desc">Находим скрытые и потерянные колодцы для ремонта, обслуживания и предотвращения аварий.</div>
+          </div>
+          <h3>Поиск скрытых колодцев</h3>
+        </div>
+
+        <div class="service-item">
+          <div class="service-img-hover">
+            <img src="corporate-service.jpg" alt="Обслуживание организаций" class="service-img">
+            <div class="service-hover-desc">Регулярное сервисное обслуживание предприятий, все документы и гарантия, официальные договоры.</div>
+          </div>
+          <h3>Обслуживание организаций по договору</h3>
+        </div>
+
       </div>
     </section>
   </main>
