--- a/index.html
+++ b/index.html
@@ -33,31 +33,36 @@
   <main>
     <section class="main-intro">
       <h1>Откачка и прочистка канализации 24/7</h1>
-      <p class="main-subtitle">Современное оборудование, оперативный выезд, гарантия качества.<br>Работаем по Пензе и области для физических и юридических лиц.</p>
-      <a class="cta phone-btn" href="tel:+79022073636">Позвонить</a>
+      <p class="main-subtitle">Современное оборудование, оперативный выезд, гарантия качества.<br>Работаем по Пензе и области для физ. и юр. лиц.</p>
+      <a class="call-btn" href="tel:+79022073636">Позвонить: +7 (902) 207-36-36</a>
+    </section>
+
+    <section class="usps">
+      <div><span class="usp-icon">📞</span> Работаем 24/7</div>
+      <div><span class="usp-icon">💧</span> Современное оборудование</div>
+      <div><span class="usp-icon">📄</span> Договоры для юр. лиц</div>
     </section>
 
     <section class="gallery">
       <h2>Наше оборудование</h2>
       <div class="gallery-list">
         <div class="gallery-item">
-          <img src="tech1.jpg" alt="Ассенизаторская машина" class="gallery-placeholder">
-          <span>Основная ассенизаторская техника</span>
+          <img src="equipment1.jpg" alt="Оборудование 1" class="gallery-placeholder">
+          <span>Вакуумная машина КО-505</span>
         </div>
         <div class="gallery-item">
-          <img src="tech2.jpg" alt="Гидродинамическое оборудование" class="gallery-placeholder">
-          <span>Гидродинамическое оборудование</span>
+          <img src="equipment2.jpg" alt="Оборудование 2" class="gallery-placeholder">
+          <span>Гидродинамический аппарат</span>
         </div>
         <div class="gallery-item">
-          <img src="tech3.jpg" alt="Механические инструменты" class="gallery-placeholder">
-          <span>Механические инструменты</span>
+          <img src="equipment3.jpg" alt="Оборудование 3" class="gallery-placeholder">
+          <span>Механический трос</span>
         </div>
         <div class="gallery-item">
-          <img src="tech4.jpg" alt="Видеодиагностика" class="gallery-placeholder">
-          <span>Система видеодиагностики</span>
+          <img src="equipment4.jpg" alt="Оборудование 4" class="gallery-placeholder">
+          <span>Видеоинспекция труб</span>
         </div>
       </div>
-      <p style="margin-top:22px; color:#527;">Используем только современную и профессиональную технику для эффективной и аккуратной работы.</p>
     </section>
   </main>
 
@@ -66,7 +71,6 @@
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
-
   <script>
     const burgerBtn = document.getElementById('burgerBtn');
     const mobileNav = document.getElementById('mobileNav');
