--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav" id="mainNav">
-        <a href="services.html" style="font-weight:700;">Услуги</a>
+        <a href="services.html" class="active">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
@@ -23,78 +23,52 @@
       <button class="burger" id="burgerBtn">&#9776;</button>
     </div>
     <div class="mobile-nav" id="mobileNav">
-      <a href="services.html" style="font-weight:700;">Услуги</a>
+      <a href="services.html" class="active">Услуги</a>
       <a href="about.html">О компании</a>
       <a href="licenses.html">Сертификаты</a>
       <a href="contacts.html">Контакты</a>
     </div>
   </header>
-
   <main>
-    <section>
-      <h1>Наши услуги</h1>
-      <div class="service-list">
-
-        <div class="service-item">
-          <div class="service-img-hover">
-            <img src="emergency-cleaning.jpg" alt="Аварийная прочистка" class="service-img">
-            <div class="service-hover-desc">Быстрая и эффективная помощь при любых засорах — механическая и гидродинамическая прочистка труб.</div>
-          </div>
-          <h3>Аварийная прочистка канализации</h3>
-        </div>
-
-        <div class="service-item">
-          <div class="service-img-hover">
-            <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="service-img">
-            <div class="service-hover-desc">Вода под высоким давлением очищает трубы от наростов, жира и ржавчины. Безопасно и надёжно.</div>
-          </div>
-          <h3>Гидродинамическая прочистка</h3>
-        </div>
-
-        <div class="service-item">
-          <div class="service-img-hover">
-            <img src="mechanical-cleaning.jpg" alt="Механическая прочистка" class="service-img">
-            <div class="service-hover-desc">Удаляем сложные засоры тросом, машинами и ручным инструментом — даже в старых трубах.</div>
-          </div>
-          <h3>Механическая прочистка</h3>
-        </div>
-
-        <div class="service-item">
-          <div class="service-img-hover">
-            <img src="septic-cleaning.jpg" alt="Откачка выгребных ям" class="service-img">
-            <div class="service-hover-desc">Быстрая и аккуратная откачка любых объёмов — до 12 куб.м за выезд, санитарная обработка, илосос.</div>
-          </div>
-          <h3>Откачка выгребных ям, септиков, биотуалетов</h3>
-        </div>
-
-        <div class="service-item">
-          <div class="service-img-hover">
-            <img src="video-inspection.jpg" alt="Видеоинспекция" class="service-img">
-            <div class="service-hover-desc">Осмотр внутренних стенок труб камерой, поиск и предотвращение аварийных ситуаций, полный отчёт.</div>
-          </div>
-          <h3>Видеоинспекция канализации</h3>
-        </div>
-
-        <div class="service-item">
-          <div class="service-img-hover">
-            <img src="well-search.jpg" alt="Поиск колодцев" class="service-img">
-            <div class="service-hover-desc">Находим скрытые и потерянные колодцы для ремонта, обслуживания и предотвращения аварий.</div>
-          </div>
-          <h3>Поиск скрытых колодцев</h3>
-        </div>
-
-        <div class="service-item">
-          <div class="service-img-hover">
-            <img src="corporate-service.jpg" alt="Обслуживание организаций" class="service-img">
-            <div class="service-hover-desc">Регулярное сервисное обслуживание предприятий, все документы и гарантия, официальные договоры.</div>
-          </div>
-          <h3>Обслуживание организаций по договору</h3>
-        </div>
-
+    <h1>Наши услуги</h1>
+    <div class="services-list">
+      <div class="service-card">
+        <img src="emergency-cleaning.jpg" alt="Аварийная прочистка" class="service-img">
+        <h3>Аварийная прочистка канализации</h3>
+        <p>Быстрая помощь при любых засорах. Механическая и гидродинамическая прочистка труб.</p>
       </div>
-    </section>
+      <div class="service-card">
+        <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="service-img">
+        <h3>Гидродинамическая прочистка</h3>
+        <p>Вода под высоким давлением очищает трубы от наростов, жира и ржавчины.</p>
+      </div>
+      <div class="service-card">
+        <img src="mechanical-cleaning.jpg" alt="Механическая прочистка" class="service-img">
+        <h3>Механическая прочистка</h3>
+        <p>Удаляем сложные засоры тросом, машинами, ручным инструментом.</p>
+      </div>
+      <div class="service-card">
+        <img src="septic-cleaning.jpg" alt="Откачка выгребных ям" class="service-img">
+        <h3>Откачка выгребных ям, септиков, биотуалетов</h3>
+        <p>Быстро и аккуратно откачиваем любые объёмы. Индивидуальный подход.</p>
+      </div>
+      <div class="service-card">
+        <img src="inspection.jpg" alt="Видеоинспекция" class="service-img">
+        <h3>Видеоинспекция канализации</h3>
+        <p>Осмотр труб видеокамерой — быстро выявляем и устраняем проблемы.</p>
+      </div>
+      <div class="service-card">
+        <img src="well-search.jpg" alt="Поиск колодцев" class="service-img">
+        <h3>Поиск скрытых колодцев</h3>
+        <p>Находим и помогаем обслуживать скрытые элементы канализации.</p>
+      </div>
+      <div class="service-card">
+        <img src="org-service.jpg" alt="Обслуживание организаций" class="service-img">
+        <h3>Обслуживание организаций по договору</h3>
+        <p>Регулярный сервис для юр. лиц. Все документы и отчётность.</p>
+      </div>
+    </div>
   </main>
-
   <footer>
     <div class="container">
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
