--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       </a>
       <nav class="nav" id="mainNav">
         <a href="services.html">Услуги</a>
-        <a href="about.html" style="font-weight:700;">О компании</a>
+        <a href="about.html" class="active">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
@@ -24,17 +24,21 @@
     </div>
     <div class="mobile-nav" id="mobileNav">
       <a href="services.html">Услуги</a>
-      <a href="about.html" style="font-weight:700;">О компании</a>
+      <a href="about.html" class="active">О компании</a>
       <a href="licenses.html">Сертификаты</a>
       <a href="contacts.html">Контакты</a>
     </div>
   </header>
   <main>
-    <!-- Контент о компании -->
-    <section class="about-text">
-      <h1>О компании</h1>
-      <!-- Тут твой текст -->
-    </section>
+    <h1>О компании</h1>
+    <div class="about-block">
+      <p>
+        «Золотарь 58» — профессиональные услуги по откачке и прочистке канализации в Пензе и области. <br>
+        Более 10 лет опыта, собственный автопарк техники, современное оборудование для гидродинамической и механической чистки, видеоинспекции трубопроводов.<br><br>
+        Работаем с физическими и юридическими лицами. Официальные договоры, все необходимые документы, оплата по счету и наличными.<br>
+        Качество и оперативность гарантированы!
+      </p>
+    </div>
   </main>
   <footer>
     <div class="container">
