--- a/licenses.html
+++ b/licenses.html
@@ -17,7 +17,7 @@
       <nav class="nav" id="mainNav">
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
-        <a href="licenses.html" style="font-weight:700;">Сертификаты</a>
+        <a href="licenses.html" class="active">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
       <button class="burger" id="burgerBtn">&#9776;</button>
@@ -25,25 +25,22 @@
     <div class="mobile-nav" id="mobileNav">
       <a href="services.html">Услуги</a>
       <a href="about.html">О компании</a>
-      <a href="licenses.html" style="font-weight:700;">Сертификаты</a>
+      <a href="licenses.html" class="active">Сертификаты</a>
       <a href="contacts.html">Контакты</a>
     </div>
   </header>
   <main>
-    <!-- Сертификаты и лицензии -->
-    <section class="gallery">
-      <h1>Сертификаты и лицензии</h1>
-      <div class="gallery-list">
-        <div class="gallery-item">
-          <img src="license1.jpg" alt="Сертификат 1" class="gallery-placeholder">
-          <span>Сертификат появится позже</span>
-        </div>
-        <div class="gallery-item">
-          <img src="license2.jpg" alt="Сертификат 2" class="gallery-placeholder">
-          <span>Сертификат появится позже</span>
-        </div>
+    <h1>Сертификаты и лицензии</h1>
+    <div class="licenses-block">
+      <div class="license-item">
+        <img src="certificate-placeholder1.jpg" alt="Сертификат" class="license-img">
+        <span>Скоро здесь появится сертификат</span>
       </div>
-    </section>
+      <div class="license-item">
+        <img src="certificate-placeholder2.jpg" alt="Сертификат" class="license-img">
+        <span>Скоро здесь появится лицензия</span>
+      </div>
+    </div>
   </main>
   <footer>
     <div class="container">
