--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
-        <a href="contacts.html" style="font-weight:700;">Контакты</a>
+        <a href="contacts.html" class="active">Контакты</a>
       </nav>
       <button class="burger" id="burgerBtn">&#9776;</button>
     </div>
@@ -26,44 +26,25 @@
       <a href="services.html">Услуги</a>
       <a href="about.html">О компании</a>
       <a href="licenses.html">Сертификаты</a>
-      <a href="contacts.html" style="font-weight:700;">Контакты</a>
+      <a href="contacts.html" class="active">Контакты</a>
     </div>
   </header>
   <main>
-    <section class="contacts-details">
+    <section class="contacts-section">
       <h1>Контакты</h1>
-      <div>
-        <div style="font-size:1.17em; font-weight:600; margin:12px 0;">
-          Телефон: <a class="phone-link phone-btn" href="tel:+79022073636">+7 (902) 207-36-36</a>
+      <div class="contacts-card">
+        <div class="contacts-phone-row">
+          <span>Телефон:</span>
+          <a href="tel:+79022073636" class="call-btn">+7 (902) 207-36-36</a>
         </div>
-        <div style="font-size:1.13em; margin:12px 0 4px 0;">
-          Email: <a class="phone-link" href="mailto:zolotar85@list.ru">zolotar85@list.ru</a>
+        <div>
+          Email: <a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a>
         </div>
-        <div style="color:#6b7c8b; margin-top:20px;">Звоните — работаем 24/7, выезд по Пензе и области</div>
+        <div class="contacts-desc">
+          Звоните — работаем 24/7, выезд по Пензе и области
+        </div>
       </div>
     </section>
   </main>
   <footer>
-    <div class="container">
-      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
-    </div>
-  </footer>
-  <script>
-    const burgerBtn = document.getElementById('burgerBtn');
-    const mobileNav = document.getElementById('mobileNav');
-    burgerBtn.addEventListener('click', () => {
-      mobileNav.classList.toggle('show');
-      if (mobileNav.classList.contains('show')) {
-        Array.from(mobileNav.getElementsByTagName('a')).forEach(a => {
-          a.onclick = () => mobileNav.classList.remove('show');
-        });
-      }
-    });
-    window.addEventListener('resize', () => {
-      if (window.innerWidth > 600) {
-        mobileNav.classList.remove('show');
-      }
-    });
-  </script>
-</body>
-</html>
+    <div class="container
